# ChessRL

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile.gui  Dockerfile.train  Dockerfile.web  Makefile  README.md  build_and_run.sh  docker-compose.yml  gunicorn.conf.py  main.py  play_gui.py  pyproject.toml  requirements-web.txt  requirements.txt  train.py  train_chess.py  wsgi.py
config/chess/: __init__.py  env_wrapper.py  model.py
core/: dataset.py  game.py  reanalyze_worker.py  train.py  utils.py
core/ctree/: cytree.cpp  cytree.pyx  setup.py
src/: config.py  evaluator.py  index.html  index_improved.html  luna_html_wrapper.py  main.py  mcts.py  network.py  play_vs_model.py  playground.py  pretrain.py  pyproject.toml  replay_buffer.py  self_play.py  selfplay.html  selfplay_improved.html  trainer.py  web_app.py
src/config/: config.yaml  dataset_config.yaml
src/luna/: NNet.py  __init__.py  coach.py  config.py  engine.py  ezv2_model.py  ezv2_networks.py  legacy_alpha_zero_network.py  luna.py  luna_NN.py  mcts.py  network.py  profiling.py  replay_buffer.py  targets.py  utils.py
src/luna/game/: __init__.py  arena.py  chess_game.py  luna_game.py  player.py  state.py
src/pretrain/: __init__.py  generate.py  preprocess.ipynb  train.ipynb
src/pretrain/utils/: __init__.py  board.py  data.py  dataset.py  generate.py  preprocess.py  render.py  tools.py  transforms.py  valid.py
src/static/: chessboard.min.js
tests/: bench_throughput.py  conftest.py  test_coach.py  test_ezv2_model.py  test_ezv2_networks.py  test_game.py  test_integration.py  test_legal_masking.py  test_mcts.py  test_replay_buffer.py  test_targets.py  test_train_ezv2.py
