[project]
name = "chessrl"
version = "0.2.0"
description = "EfficientZeroV2-based chess engine trained via self-play"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.24,<3.0",
    "torch>=2.0,<2.6",
    "python-chess>=1.9.0",
    "flask>=3.0.0",
    "loguru>=0.7.0",
    "tyro>=0.8.0",
    "tqdm>=4.66.0",
    "wandb>=0.16.0",
    "stockfish>=3.28.0",
    "tensorboard>=2.14.0",
    "torch-tb-profiler>=0.4.3",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]
perf = [
    "numba",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B905",   # zip strict
    "SIM108", # ternary operator
    "UP007",  # X | Y union syntax (keep Optional for clarity)
]

[tool.ruff.lint.isort]
known-first-party = ["luna"]

[tool.ruff.lint.per-file-ignores]
"src/luna/__init__.py" = ["F401"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/luna"]
